# ciclo

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  ciclo.py  index.html  mkdocs.yml  mnist.py  pyproject.toml  setup.sh  sitemap.xml  test.py
.github/workflows/: create-release.yml  publish-package.yml  run-tests.yml
ciclo/: __init__.py  api.py  callbacks.py  logging.py  logs.py  loops.py  managed.py  schedules.py  strategies.py  timetracking.py  types.py  utils.py
ciclo/loops/: common.py  fit_loop.py  loop.py
ciclo/states/: flax_state.py
design/: index.html
docs/: design.md  getting_started.ipynb  getting_started.md  index.md  managed_api.ipynb  stream.ipynb  user_guide.md
docs/guide/: overview.md
examples/: 01_mnist_simple.py  02_mnist_train_loop.py  03_mnist_manual_iteration.py  04_mnist_managed_api.py  05_mnist_flax_state.py  mnist_create_flax_state.py  mnist_fit.py  mnist_full.py  mnist_full_auto.py  mnist_full_logs.py  mnist_full_logs_fit.py  mnist_full_managed.py  mnist_full_manual.py  mnist_full_manual_managed.py  mnist_simple.py  mnist_simple_auto.py  mnist_simple_logs.py  mnist_simple_managed.py  mnist_simple_manual.py  mnist_simple_manual_managed.py
examples/equinox/: 01_mnist_equinox.py
examples/flax/: 01_mnist_simple.py  02_mnist_train_loop.py  04_mnist_managed_api.py  05_mnist_flax_state.py
examples/haiku/: 01_mnist_haiku.py
examples/jax/: 00_linear_regression_pure_jax.py
getting_started/: index.html
guide/overview/: index.html
logdir/getting_started/1668284233/: checkpoint_10000
logdir/getting_started/1668284404/: checkpoint_10000
logdir/getting_started/1668285205/: checkpoint_10000
logdir/getting_started/1668285226/: checkpoint_5000
logdir/getting_started/1668285247/: checkpoint_10000
logdir/getting_started/1668286408/: checkpoint_10000
logdir/getting_started/1668286443/: checkpoint_10000
logdir/getting_started/1668286464/: checkpoint_5000
logdir/getting_started/1668286473/: checkpoint_5000
logdir/getting_started/1668286867/: checkpoint_5000
logdir/getting_started/1668286880/: checkpoint_5000
logdir/getting_started/1668286890/: checkpoint_5000
logdir/getting_started/1668286941/: checkpoint_5000
logdir/getting_started/1668288422/: checkpoint_5000
logdir/getting_started/1668288436/: checkpoint_5000
logdir/getting_started/1668288445/: checkpoint_5000
managed_api/: index.html
scripts/: deploy-docs.sh  run-all-examples.bash  run-all-examples.fish  update_version.py
stream/: index.html
tests/: test_api.py  test_callbacks.py  test_integration.py  test_logging.py  test_loops.py  test_managed.py  test_schedules.py  test_timetracking.py  test_utils.py
tests/examples_tests/: test_equinox.py
user_guide/: index.html
(+8 files in other folders)
