[tool.poetry]
name = "ciclo"
version = "0.1.6"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jax = ">=0.4.0"
jaxlib = ">=0.4.0"
flax = ">=0.6.0"
tqdm = "*"
pkbar = "*"
einop = "*"
numpy = "*" 


[tool.poetry.group.dev.dependencies]
black = {version = "==23.1.0"}
tensorflow-cpu = ">=2.0.0"
tensorflow-datasets = ">=4.0.0"
pytest = "7.1.3"
ipykernel = ">=6.16.1"
mkdocs-material = ">=8.5.10"
mkdocs-jupyter = {version = ">=0.22.0", python = ">=3.7.1,<3.11"}
clu = ">=0.0.8"
pre-commit = ">=2.21.0"
pytest-cov = ">=4.0.0"



[tool.poetry.group.all.dependencies]
wandb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
