[tool.poetry]
name = "ciclo"
version = "0.1.9"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
jax = ">=0.4.0"
jaxlib = ">=0.4.0"
flax = ">=0.6.0"
tqdm = "*"
pkbar = "*"
einop = "*"
numpy = "*" 
# jax-metrics = {path = "../jax_metrics"}
jax-metrics = "^0.2.1"
orbax = "<0.1.4"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"
tensorflow-cpu = ">=2.0.0"
tensorflow-datasets = ">=4.0.0"
clu = ">=0.0.8"
equinox = ">=0.10.1"
scipy = "!=1.10.1"
dm-haiku = "^0.0.9"

[tool.poetry.group.docs.dependencies]
mkdocs-material = ">=8.5.10"
mkdocs-jupyter = {version = ">=0.22.0", python = ">=3.7.1,<3.11"}

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.21.0"
black = "23.1.0"
isort = "5.12.0"
ipykernel = "^6.21.2"

[tool.poetry.group.all.dependencies]
wandb = ">=0.13.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
